# gio

./: Cargo.toml  Gir.toml
src/: file.rs  lib.rs
src/auto/: application.rs  dbus_auth_observer.rs  dbus_connection.rs  dbus_interface_info.rs  dbus_message.rs  enums.rs  file.rs  flags.rs  functions.rs  mod.rs
