[package]
name = "gio"
version = "0.1.3"
authors = ["The Gtk-rs Project Developers"]

description = "Rust bindings for the GLib library"
repository = "https://github.com/gtk-rs/gio"
license = "MIT"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/gio/"
keywords = ["glib", "gio", "gtk-rs", "gnome"]

[lib]
name = "gio"

[dependencies]
libc = "0.2"

#[dependencies.gio-sys]
#git = "https://github.com/gtk-rs/sys"
#version = "0.3.4"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
version = "0.1.3"
